[package]
name = "crawler"
version = "0.1.0"
authors = ["Simon Bernier St-Pierre <git@sbstp.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1"
attohttpc = { path = "..", features = ["json"] }
serde = { version = "1", features = ["derive"] }
